dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@namespace_id_First=number,Second=string.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: namespace:id<First=number,Second=string>"
---
GenericObject {
    ident: ETypeId(namespace:id),
    generics: [
        (
            "First",
            Simple(
                Number,
            ),
        ),
        (
            "Second",
            Simple(
                String,
            ),
        ),
    ],
}
