dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@string.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: string"
---
Simple(
    String,
)
