dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@sys_optional_Item=List_Item=Map_Key=string,Item=number.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: sys:optional<Item=List<Item=Map<Key=string,Item=number>>>"
---
GenericObject {
    ident: ETypeId(sys:optional),
    generics: [
        (
            "Item",
            List(
                Map {
                    key: Simple(
                        String,
                    ),
                    value: Simple(
                        Number,
                    ),
                },
            ),
        ),
    ],
}
