dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@sys_optional_Item=number.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: sys:optional<Item=number>"
---
GenericObject {
    ident: ETypeId(sys:optional),
    generics: [
        (
            "Item",
            Simple(
                Number,
            ),
        ),
    ],
}
