dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@true.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: true"
---
Simple(
    Const {
        value: Boolean(
            true,
        ),
    },
)
